[tool.poetry]
name = "sample_pipeline"
version = "0.1.0"
description = "creating end-to-end deployment pipeline"
authors = ["Krushna Panchvishe <krushna.4997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
