[tool.poetry]
name = "sample_pipeline"
version = "0.1.0"
description = "creating end-to-end deployment pipeline"
authors = ["Krushna Panchvishe <krushna.4997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dvc = {version = ">=2.9", extras = ["all"]}
tensorflow = ">=2.5,<2.6"
"ruamel.yaml" = ">=0.17,<0.18"
imageio = ">=2.9,<3"
dvclive = ">=0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
